--- a/Practice Project-02/style.css
+++ b/Practice Project-02/style.css
@@ -134,118 +134,63 @@ table {
     border-spacing: 0;
 }
 
-html {
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -ms-overflow-style: scrollbar;
-    -webkit-tap-highlight-color: transparent;
+body {
+    background: #f5d9d5;
+    font-family: "Nunito", sans-serif;
 }
 
-.poppins-thin {
-    font-family: "Poppins", serif;
+#mainNavbar {
+    font-size: 1.5rem;
     font-weight: 100;
-    font-style: normal;
 }
 
-.poppins-extralight {
-    font-family: "Poppins", serif;
-    font-weight: 200;
-    font-style: normal;
+#mainNavbar .navbar-brand {
+    color: #ea1c2c;
 }
 
-.poppins-light {
-    font-family: "Poppins", serif;
-    font-weight: 300;
-    font-style: normal;
+#mainNavbar .nav-link {
+    color: white;
 }
 
-.poppins-regular {
-    font-family: "Poppins", serif;
-    font-weight: 400;
-    font-style: normal;
+#mainNavbar .nav-link:hover {
+    color: #ea1c2c;
 }
 
-.poppins-medium {
-    font-family: "Poppins", serif;
-    font-weight: 500;
-    font-style: normal;
+#headingGroup span {
+    color: #ea1c2c;
 }
 
-.poppins-semibold {
-    font-family: "Poppins", serif;
-    font-weight: 600;
-    font-style: normal;
-}
-
-.poppins-bold {
-    font-family: "Poppins", serif;
-    font-weight: 700;
-    font-style: normal;
-}
-
-.poppins-extrabold {
-    font-family: "Poppins", serif;
-    font-weight: 800;
-    font-style: normal;
-}
-
-.poppins-black {
-    font-family: "Poppins", serif;
-    font-weight: 900;
-    font-style: normal;
-}
-
-.poppins-thin-italic {
-    font-family: "Poppins", serif;
+#headingGroup h1 {
     font-weight: 100;
-    font-style: italic;
+    font-size: 4rem;
 }
 
-.poppins-extralight-italic {
-    font-family: "Poppins", serif;
-    font-weight: 200;
-    font-style: italic;
+.blurb h2 {
+    color: #ea1c2c;
+    font-weight: 100;
+    font-size: 2.5rem;
 }
 
-.poppins-light-italic {
-    font-family: "Poppins", serif;
-    font-weight: 300;
-    font-style: italic;
+.blurb p {
+    color: #f498b8;
+    font-size: 1.125rem;
+    font-weight: 100;
+    line-height: 2;
 }
 
-.poppins-regular-italic {
-    font-family: "Poppins", serif;
-    font-weight: 400;
-    font-style: italic;
+.content {
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
-.poppins-medium-italic {
-    font-family: "Poppins", serif;
-    font-weight: 500;
-    font-style: italic;
+.navbar.scrolled {
+    background: rgb(222, 192, 222);
+    transition: background 500ms;
 }
 
-.poppins-semibold-italic {
-    font-family: "Poppins", serif;
-    font-weight: 600;
-    font-style: italic;
-}
-
-.poppins-bold-italic {
-    font-family: "Poppins", serif;
-    font-weight: 700;
-    font-style: italic;
-}
-
-.poppins-extrabold-italic {
-    font-family: "Poppins", serif;
-    font-weight: 800;
-    font-style: italic;
-}
-
-.poppins-black-italic {
-    font-family: "Poppins", serif;
-    font-weight: 900;
-    font-style: italic;
+@media(max-width: 1200px) {
+    #headingGroup h1 {
+        font-weight: 100;
+        font-size: 3rem;
+    }
 }
